# multimodal-fashion-recommender

./: .dockerignore  .gitignore  CLEANUP_PLAN.md  CLIENT_ONBOARDING.md  COST.md  Dockerfile  PLAN.md.md  PROJECT_MEMORY.md  QUICKSTART.md  README.md  cloudbuild.yaml  config.yaml  pyproject.toml  requirements.txt  spec.md  upload_artifacts.py
.github/workflows/: deploy.yml
app/: attribute_synonyms.py  attributes.py  cache.py  color.py  complete.py  occasion.py  pricing.py  rerank.py  storage.py  streamlit_app.py  visual.py
app/api/: auth.py  logging_config.py  main.py  metrics.py  rate_limit.py  routes.py  schemas.py
app/brands/: registry.py
app/ingestion/: category_normalize.py  filters.py  images.py  interactions.py  pipeline.py  schema.py  sources.py
brands/: fashor.yaml  h_and_m.yaml  powerlook.yaml  snitch.yaml  virgio.yaml  zzdemo_brand.yaml
data/fashor/: attributes.json  synthetic_users.csv
data/powerlook/: attributes.json  catalog.csv  colors.json  synthetic_users.csv
data/snitch/: attributes.json  catalog.csv  catalog_full.csv  colors.json  synthetic_users.csv
demo/: .env.example  .gitignore  demo_script.md  next.config.ts  package-lock.json  package.json
docs/: SECURITY_ASSESSMENT.md  SYSTEM_DESIGN.md
infra/: Dockerfile.cpu  docker-compose.yml
notebooks/: 01_data_exploration.ipynb
reports/: attribute_spotcheck_sample.json  similarity_eval.html  similarity_eval_after.html  similarity_eval_before.html  similarity_eval_powerlook_after.html  similarity_eval_powerlook_before.html
scripts/: 00_prepare_data.py  01_build_embeddings.py  02_train_model.py  03_build_index.py  04_baselines.py  05_eval_comparison.py  06_baseline_quality_gate.py  07_coldstart_stratified_eval.py  _self_test.py  ablate_occasion.py  ablate_rerank.py  apply_category_normalization.py  brand_preflight.py  build_visual_index.py  build_visual_index_fashionclip.py  compute_item_colors.py  diagnose_style_search_failures.py  eval_attributes.py  eval_color_rerank.py  eval_complete_look.py  eval_fashionclip_ab.py  eval_honest_style_queries.py  eval_serve_path.py  eval_shirt_tshirt_rerank.py  eval_similarity_quality.py  eval_style_search.py  eval_visual_search.py  eval_visual_search_ab.py  extract_attributes.py  find_ab_items.py  fix_snitch_domain.py  fix_snitch_pdp_www.py  gen_catalog_json.py  generate_phase2_demo.py  generate_synthetic_users.py  ingest_catalog.py  ingest_interactions.py  onboard_brand.ps1  prep_snitch_catalog.py  prepare_indian_catalogs.py
spaces/: README.md  app.py  config_spaces.yaml  requirements.txt
tests/: conftest.py  test_api_contract.py  test_attributes.py  test_attributes_serve_path.py  test_auth.py  test_brand_filter.py  test_brand_preflight.py  test_cache.py  test_category_normalize.py  test_complete.py  test_encoders.py  test_eval_attributes.py  test_eval_honest_style_queries.py  test_eval_visual_search_ab.py  test_groq_hardening.py  test_groq_title_constraint.py  test_hardening_c1c3.py  test_hardening_c3.py  test_hardening_m1m3m4m5.py  test_hardening_p0.py  test_image_download.py  test_indian_demo.py  test_ingest_catalog.py  test_ingest_filters.py  test_ingest_interactions.py  test_ingest_schema.py  test_models.py  test_occasion.py  test_pricing.py  test_recommend_fixes.py  test_rerank_diversity.py  test_rerank_str_int.py  test_serve_path_h_and_m.py  test_storage.py  test_style_search.py  test_visual.py  test_visual_search_fashionclip_serve_path.py  test_visual_search_self_retrieval.py
(+40 files in other folders)
