[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "multimodal-fashion-recommender"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
    # API runtime
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "python-multipart>=0.0.9",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "prometheus-client>=0.21",
    "slowapi>=0.1.9",
    "structlog>=24.4",
    # Inference (torch + FAISS only — no CLIP/SBERT at API runtime)
    "torch>=2.4.0",
    "faiss-cpu>=1.8.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "pyarrow>=15.0.0",
    "pyyaml>=6.0.0",
    "requests>=2.32.0",
    "redis>=5.0",
    "google-cloud-storage>=2.14.0",
]

[project.optional-dependencies]
ml = [
    "torchvision>=0.19.0",
    "transformers>=4.44.0",
    "sentence-transformers>=3.0.0",
    "open-clip-torch>=2.24.0",
    "scikit-learn>=1.4.0",
    "tqdm>=4.66.0",
    "pillow>=10.0.0",
    "matplotlib>=3.8.0",
    "streamlit>=1.38.0",
    "ipykernel>=6.29.0",
]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "httpx>=0.27",
    "ruff>=0.8",
    "mypy>=1.13",
    "types-pyyaml>=6.0",
    "types-requests>=2.32",
]

# ── PyTorch index sources ─────────────────────────────────────────────────────
# Windows dev (CUDA 13.0 / RTX 3070): pull CUDA 12.8 wheels so encoder tests
# that call .to("cuda") pass.
# Linux (Docker / Cloud Run): pull CPU-only wheels from the PyTorch CPU index.
# PyPI's linux torch wheel pulls nvidia-* CUDA packages as hard deps — the
# explicit CPU index is required to avoid them.
[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'win32'" },
    { index = "pytorch-cpu", marker = "sys_platform == 'linux'" },
]
torchvision = [
    { index = "pytorch-cu128", marker = "sys_platform == 'win32'" },
    # Linux (Docker serving image, [ml] extra) MUST use the same pytorch-cpu index as torch.
    # Otherwise torchvision resolves from PyPI with a mismatched ABI and open_clip fails with
    # "operator torchvision::nms does not exist" (this broke the first visual-search build).
    { index = "pytorch-cpu", marker = "sys_platform == 'linux'" },
]

[tool.hatch.build.targets.wheel]
packages = ["app", "src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = ["integration: requires H&M data files and HM_API_KEY env var"]

[tool.ruff]
line-length = 100
exclude = ["notebooks", "spaces"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"scripts/0*.py" = ["E501", "F401", "F841", "B905", "I001"]
"scripts/04_baselines.py" = ["E501", "F401", "F841", "I001"]
"scripts/05_eval_comparison.py" = ["E501", "F401", "F841"]
"scripts/06_baseline_quality_gate.py" = ["E501", "F541"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "app.api.*"
strict = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "app.brands.*"
strict = true
disallow_untyped_defs = true

[tool.coverage.report]
omit = [
    "tests/*",
    "scripts/*",
    "spaces/*",
    "notebooks/*",
    "app/streamlit_app.py",
]
